fix: Update schema path construction to use Hugo's absURL for proper base URL handling
Signed-off-by: Orhun Ucak <orhunucak@gmail.com>

--- a/docs-gen/layouts/shortcodes/graphql-voyager-builtin.html
+++ b/docs-gen/layouts/shortcodes/graphql-voyager-builtin.html
@@ -138,8 +138,8 @@ div[class*="menu-content"],
 
   // Load and render the schema
   function loadSchema() {
-    // For Hugo, we need to construct the path to the assets
-    const fullSchemaPath = schemaPath.startsWith('/') ? schemaPath : '/' + schemaPath;
+    // Use Hugo's absURL to construct the full path with proper base URL
+    const fullSchemaPath = '{{ absURL $schema }}';
 
     fetch(fullSchemaPath)
       .then(response => {
