fix: Update schema path construction to use Hugo's BaseURL for accurate URL handling
Signed-off-by: Orhun Ucak <orhunucak@gmail.com>

--- a/docs-gen/layouts/shortcodes/graphql-voyager-builtin.html
+++ b/docs-gen/layouts/shortcodes/graphql-voyager-builtin.html
@@ -139,7 +139,13 @@ div[class*="menu-content"],
   // Load and render the schema
   function loadSchema() {
     // Use Hugo's absURL to construct the full path with proper base URL
-    const fullSchemaPath = '{{ absURL $schema }}';
+    const baseURL = '{{ .Site.BaseURL }}';
+    const schemaPath = '{{ $schema }}';
+    const fullSchemaPath = baseURL.endsWith('/') ? baseURL + schemaPath.replace(/^\//, '') : baseURL + '/' + schemaPath.replace(/^\//, '');
+    
+    console.log('Base URL:', baseURL);
+    console.log('Schema path:', schemaPath);
+    console.log('Full schema path:', fullSchemaPath);
 
     fetch(fullSchemaPath)
       .then(response => {
